~5-6: 칼럼 웹사이트- 메인콘텐츠 영역 만들기

--- a/WCBCafe/index.html
+++ b/WCBCafe/index.html
@@ -5,9 +5,28 @@
     <title>WCBCafe</title>
     <meta name="description" content="토마토 커피가 맛있는 카페">
     <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/logo.png">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+<div id="home" class="big-bg">
+    <header class="page-header wrapper">
+        <h1><a href="index.html"><img class="logo" src="img/logo.png" alt="WCB카페 홈"></a></h1>
+        <nav>
+            <ul class="main-nav">
+                <li><a href="news.html">News</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="home-content wrapper">
+        <h2 class="page-title"> We'll Make Your Tomato</h2>
+        <p>멋진 토마토를 통해서 힐링 하세요. 첨가물을 넣지 않은 토마토로 요리를 합니다.</p>
+        <a class="button" href="menu.html">메뉴 보기</a>
+    </div><!-- /.home-content-->
+</div><!--/#home-->
 
 </body>
 </html>
